# PyQtPaint

./: README.md  pyproject.toml
src/pyqtpaint/: main.py
src/pyqtpaint/custom_windows/: color_window.py  main_window.py
src/pyqtpaint/shapes/: circle.py  line.py  rectangle.py
src/pyqtpaint/views/: custom_view.py
