[tool.poetry]
name = "pyqtpaint"
version = "0.1.0"
description = ""
authors = ["Damian Czajkowski <damian.czajkowski@mirumee.com>"]
readme = "README.md"
packages = [{include = "pyqtpaint", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pyqt6 = "^6.5.3"


[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.6.1"
pylint = "^3.0.1"
ipdb = "^0.13.13"
pdpp = "^0.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
